# stock-trading-alert

./: README.md  pyproject.toml
stock_trading_alert/: main.py  settings.py  telegram_bot.py  utils.py
